HtmlUi: fixed 1px shift between view-buttons and form-tabs (task-bar) renamed OutlineViewButton to ViewButton.css

--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/desktop/DesktopNavigation.css
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/desktop/DesktopNavigation.css
@@ -71,6 +71,6 @@
 
 .navigation-container {
   width: 100%;
-  padding-top: 10px;
+  padding-top: 11px;
   height: calc(~"100%" - @view-buttons-height);
 }
