--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/desktop/ViewButton.css
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/desktop/ViewButton.css
@@ -1,7 +1,6 @@
-/* XXX AWE rename to ViewButton.css */
 .view-button-menu {
   padding: 0px 15px 0px 15px;
-  line-height: 50px;
+  line-height: calc(@desktop-taskbar-height - 1px);
   border-top: solid 1px @border-color;
   cursor: pointer;
   color: @text-color;
