--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/style/sizes.css
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/style/sizes.css
@@ -1,5 +1,5 @@
 @size-desktop-navigation: 290px;
-@desktop-taskbar-height: 50px;
+@desktop-taskbar-height: 51px;
 @bench-margin-x: 20px;
 
 @text-field-padding: 10px;
